--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,11 @@ header {
     padding: 2rem;
     background-color: #1f1f1f;
 }
+header .logo {
+    height: 50px;
+    vertical-align: middle;
+    margin-right: 10px;
+}
 
 nav a {
     margin: 0 1rem;
